Final before presentation session 13

--- a/history/history.html
+++ b/history/history.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../global/global.css">
     <link rel="stylesheet" href="history.css">
+    <link rel="icon" type="image/x-icon" href="../global/imgs/n.ico">
     <title>History</title>
 </head>
 <body id="history" class="bcol2">
