--- a/profile/profile.html
+++ b/profile/profile.html
@@ -5,11 +5,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Profile</title>
+  <!-- <link rel="stylesheet" href="../global/global.css"> -->
   <link href="profile.css" rel="stylesheet" type="text/css" href="profile.css" />
+  <link rel="icon" type="image/x-icon" href="../global/imgs/n.ico">
 </head>
 
 <body id="user">
-  <header class="container pos-stk center sbet bcol3"></header>
+  <header class="container pos-stk center sbet bcol3 w100"></header>
   <div class="promo">
     <img src="../global/imgs/profile-banner.png" class="foto-promo">
   </div>
