--- a/cart/index.html
+++ b/cart/index.html
@@ -7,19 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nutri - Shopping Cart</title>
     <link href="style.css" rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" href="../global/global.css">
     <link rel="stylesheet" href="../global/assets/fonts/Montseratt-Medium.ttf">
-    <link rel="icon" type="image/x-icon" href="2.ico">
+    <link rel="icon" type="image/x-icon" href="../global/imgs/n.ico">
 </head>
 
-<body>
+<body id="cart">
+    <header class="container pos-stk center sbet bcol3"></header>
     <div class="container">
-        <div id="top"></div>
-        <header class="container pos-stk center sbet bcol3"></header>
         <div class="main">
             <div class="shopping-cart">
-                <div class="shoppingCartTop">
-                    <h2>Shopping Cart</h2>
-                </div>
+                <h2>Shopping Cart</h2>
                 <div class="cart-item">
                     <div class="item-image">
                         <img src="image/makanan.png" alt="">
@@ -180,7 +178,7 @@
                 <div class="payment-methods">
                     <h2>Payment Methods:</h2>
                     <div class="payment-option-dana"><img src="image/dana.png" alt="DANA"></div>
-                    <div class="payment-option-gopay"><img src="image/gopay.png" alt="Gopay"></div>
+                    <div class="payment-option-gopay"><img src="image/gopay.png" class="fit-img" alt="Gopay"></div>
                     <div class="payment-option-ovo"><img src="image/ovo.png" alt="OVO"></div>
                     <div class="payment-option-shopeePay"><img src="image/shopeepay.png" alt="Shopee Pay"></div>
                     <div class="payment-option-debit"><img src="image/logovisamastercard.png" alt="Visa"></div>
@@ -199,7 +197,7 @@
             </div>
         </div>
     </div>
-    <script src="cartpayment.js"></script>
 </body>
-
+    <script src="cartpayment.js"></script>
+    <script src="../global/global.js"></script>
 </html>
