--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../global/global.css">
     <link rel="stylesheet" href="main.css">
+    <link rel="icon" type="image/x-icon" href="global/imgs/n.ico">
     <title>Menu</title>
 </head>
 <body id="menu">
@@ -16,8 +17,8 @@
             <div id="modal-close" class="pos-abs pad15 rad5 button cwhite mont bold ts30" onclick="(toggleModal('loginModal'))">X</div>
             <section class="carousel w50 pos-rel rem">
                 <div class="slider container pos-rel w100 h100">
-                    <img src="../global/imgs/placeholder.png" class="fit-img">
-                    <img src="../global/imgs/placeholder.png" class="fit-img">
+                    <img src="./global/data/imgs/SS01-03.png" class="fit-img">
+                    <img src="./global/data/imgs/B04-00.png" class="fit-img">
                 </div>
                 <div class="slider-nav container pos-abs"></div>
             </section>
@@ -101,7 +102,7 @@
             <div class="vcontainer left-wrapper ovx-h">
                 <p class="moorley ts50 col1 nowrap">Add-ons & Modifications</p>
                 <div class="img-container container bcol1 rad10 pos-rel">
-                    <img src="../global/imgs/placeholder.png" class="fit-img">
+                    <img id="addonsImg" class="fit-img minw100">
                     <div class="pos-abs container w100 h100" style="box-shadow: inset 0 -80px 50px -40px var(--3)"></div>
                     <div class="item-name-overlay container w100 sbet pad5 pos-abs down">
                         <p id="addonsName" class="fonseca ts30 col2 lineh25">Item Name</p>
