--- a/admin/admin.html
+++ b/admin/admin.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../global/global.css">
     <link rel="stylesheet" href="admin.css">
+    <link rel="icon" type="image/x-icon" href="../global/imgs/n.ico"> 
     <title>Admin Panel</title>
 </head>
 <body id="admin">
