--- a/faq/faq.html
+++ b/faq/faq.html
@@ -6,6 +6,7 @@
     <title>FAQ</title>
     <link rel="stylesheet" href="../global/global.css">
     <link href="faq.css" rel="stylesheet"/>
+    <link rel="icon" type="image/x-icon" href="../global/imgs/n.ico">
 </head>
 <body id="faq">
     <header class="container pos-stk center w100 sbet bcol3"></header>
