--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../global/global.css">
     <link rel="stylesheet" href="main.css">
-    <link rel="icon" type="image/x-icon" href="global/imgs/n.ico">
+    <link rel="icon" type="image/x-icon" href="../global/imgs/n.ico">
     <title>Menu</title>
 </head>
 <body id="menu">
